Add requests and fill details page

--- a/src/shared/Header/components/Nav/styles.pcss
+++ b/src/shared/Header/components/Nav/styles.pcss
@@ -2,10 +2,13 @@
 
 .container {
   display: inline-flex;
+  white-space: nowrap;
+  font: var(--smallFont);
 }
 
 .component {
   text-decoration: none;
+
   &.active { border-bottom: 2px solid var(--backgroundColor); }
   & + & { margin-left: 50px; }
   & + &.hasIcon { margin-left: 35px; }
