--- a/src/styles/constants.pcss
+++ b/src/styles/constants.pcss
@@ -1,18 +1,15 @@
 :root {
   --secondColor: #787878;
   --baseColor: #101010;
+  --inverseColor: #fff;
   --activeColor: orange;
   --backgroundColor: #e28c6f;
   --backgroundLight: #fff;
   --baseFontFamily: Gill Sans, Arial, sans-serif;
-  --baseFontSize: 14px/1.462;
-  --mainFontSize: 17px/1.4705;
-  --mainFontFamily: 'Officina Serif';
-  --mainSubFontSize: 15px/1.4705;
+  --baseFontSize: 16px/1.2;
+  --smallFontSize: 14px/1.462;
   --legalFontSize: 10px/1.462;
   --baseFont: var(--baseFontSize) var(--baseFontFamily);
-  --mainFont: var(--mainFontSize) var(--mainFontFamily);
-  --mainSubFont: var(--mainSubFontSize) var(--mainFontFamily);
-  --largeFont: var(--mainFontSize) var(--baseFontFamily);
+  --smallFont: var(--smallFontSize) var(--baseFontFamily);
   --legalFont: var(--legalFontSize) var(--baseFontFamily);
 }
