--- a/src/components/Heading/styles.pcss
+++ b/src/components/Heading/styles.pcss
@@ -1,4 +1,17 @@
 .component {
   font-size: 30px;
   line-height: 1.2;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.h2 {
+  font-size: 40px;
+  line-height: 1.1;
+}
+
+.h3 {
+  font-size: 25px;
+  line-height: 1.2;
 }
