--- a/src/components/Price/styles.pcss
+++ b/src/components/Price/styles.pcss
@@ -1,7 +1,7 @@
 @import "styles/constants.pcss";
 
 .component {
-  font-size: var(--largeFont);
+  font: var(--baseFont);
   font-weight: bold;
 
   &.large { font-size: 26px; }
