--- a/src/components/Text/styles.pcss
+++ b/src/components/Text/styles.pcss
@@ -1,12 +1,12 @@
 @import "styles/constants.pcss";
 
 .component {
-  font: var(--baseFont);
+  font: var(--smallFont);
   color: var(--baseColor);
 }
 
 .legal { font: var(--legalFont); }
-.large { font: var(--largeFont); }
+.large { font: var(--baseFont); }
 .italic { font-style: italic; }
 
 .secondary {
